# UniversesAtWar

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  startup.txt
.github/workflows/: main_universesatwar.yml
data/: AmmunitionRules.csv  WeaponRules.csv  era-mapping.json  rules-glossary.json  weapons.csv
data/index/: aerospace_index.json  equipment_aliases.json  equipment_index.json  equipment_synthesized.json  infantry_index.json  vehicle_index.json
data/reference/: heat-dissipation.md  name-correction.md
design/: equipment.md  rules.prompt.md  to-do.md  units-translation.md  upgrades.md  weapons.md
output/: bv_cache.json  point-assessment.md
output/base-value-ranges/: base_ranges.json  base_ranges.md
output/cards/: cards_aerospace.html  cards_mech.html  cards_vehicle.html
output/cards_sample/: cards_aerospace.html  cards_vehicle.html
output/cards_sample_5x3/: cards_aerospace.html  cards_mech.html  cards_vehicle.html
output/data-check/: REPORT.md  duplicates.csv  equipment_resolution.json  inventory.json  issues.jsonl  malformed_files.csv  missing_fields.csv  orphan_equipment.csv  range_violations.csv  unresolved_equipment.csv
output/detachments/: coverage.json  coverage.md  (+2 more)
plans/: base-value-ranges.prompt.md  card-design.prompt.md  data-check.prompt.md  game-design.prompt.md  itemization.prompt.md  streamline-weapons.prompt.md  units.prompt.md  webserver.prompt.md
scripts/: export_distilled_weapons_csv.py  gen_heat_reference.py  gen_point_assessment.py  gen_webapp_data.py  streamline_weapons.py  strip_ammo.py
(+67 files in other folders)
