[project]
name = "universes-at-war"
version = "0.1.0"
description = "Translate BattleTech units into Legions Imperialis stat blocks and unit cards."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
render = [
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "playwright>=1.45",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
uaw-datacheck = "src.datacheck.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
